--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".AboutActivity" />
-        <activity android:name=".SettingsActivity"
-                  android:windowSoftInputMode="stateAlwaysHidden">
-
-        </activity>
+        <activity
+            android:name=".SettingsActivity"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity android:name=".FavouriteActivity" />
+        <activity android:name=".QuotationActivity"></activity>
     </application>
 
 </manifest>
